# detrain-python-lib

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
detrain/: __init__.py
detrain/fsdp_tp/: evaluation.py  log_utils.py  mesh_utils.py  model_2d.py  train.py  train_eval.py
detrain/ppl/: args_util.py  dataset_util.py  dis_model.py  evaluation.py  master_node.py  train.py  worker.py
detrain/tp/: evaluation.py  model_utils.py  sequence_evaluation.py  sequence_train.py  sequence_train_eval.py  train.py  train_eval.py
examples/fsdp_tp/: main.py  run.sh
examples/ppl/nn/: base_model.py  main.py  ppl_04.pt  shards_model.py
examples/ppl/restnet/: base_model.py  main.py  shards_model.py
examples/tp/nn/: base_model.py  main.py  rdz.py  run.sh  sequence_main.py
tests/: test_dataset.py
